--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar *ngIf="modalPage">
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal(false)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal(false)" id="exit-pickpeople"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title *ngIf="title === 'People'">{{title}}</ion-title>
     <ion-grid *ngIf="title !== 'People'">
