--- a/src/app/pages/connect/createchat/createchat.page.html
+++ b/src/app/pages/connect/createchat/createchat.page.html
@@ -10,7 +10,7 @@
     <div>
       <ion-searchbar id="chatSearchBar" [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)"></ion-searchbar>
       <div class="selected-buttons">
-        <ion-button size="small" *ngFor="let person of selectedAppUsers" (click)="unselect(person)">{{person.name}}<ion-icon name="close-circle" style="margin-left: 5px;"></ion-icon></ion-button>
+        <ion-button class="selectedAppUsers" size="small" *ngFor="let person of selectedAppUsers" (click)="unselect(person)">{{person.name}}<ion-icon name="close-circle" style="margin-left: 5px;"></ion-icon></ion-button>
       </div>
       <form *ngIf="displayGroup" [formGroup]="chatForm">
         <ion-item>
@@ -45,7 +45,7 @@
       </ion-item>
     </ion-list>
     <ion-list-header>{{userData.user.churches[userData.currentCommunityIndex].name}}</ion-list-header>
-    <ion-list>
+    <ion-list id="restvoGroup">
       <ion-item *ngFor="let person of listOfAppUsers; trackBy: customTrackBy" (click)="select(person)">
         <ion-avatar slot="start">
           <ion-img *ngIf="person.avatar" [src]="person.avatar"></ion-img>
