--- a/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
+++ b/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
@@ -21,7 +21,7 @@
 <ion-content>
   <ion-list>
     <ion-list-header *ngIf="hasOrganizerAccess">Friends</ion-list-header>
-    <ion-item (click)="selectFriend(this.selfConversationObj)" *ngIf="selfConversationObj && includeSelf && (userData.user.first_name + ' ' + userData.user.last_name).toLowerCase().includes(searchKeyword.toLowerCase())">
+    <ion-item class="pickpeople-remove-user" (click)="selectFriend(this.selfConversationObj)" *ngIf="selfConversationObj && includeSelf && (userData.user.first_name + ' ' + userData.user.last_name).toLowerCase().includes(searchKeyword.toLowerCase())">
       <ion-avatar slot="start">
         <ion-img *ngIf="userData.user.avatar" [src]="userData.user.avatar"></ion-img>
         <ion-img *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
