added spec to click invite menu toggle with inviteLabel id made

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
             <div tabindex="0"></div></ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerLink]="['/app/invite']" mode="md">
+            <ion-item id="inviteLabel" [routerLink]="['/app/invite']" mode="md">
               <ion-icon slot="start" name="share"></ion-icon>
               <ion-label>Invite</ion-label>
             <div tabindex="0"></div></ion-item>
