finished spec to click create card by clicking community card with communityCard Id and the create card

--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -90,7 +90,7 @@
           </ion-card>
         </ion-col>
         <ion-col size="auto">
-          <ion-card class="category-card" mode="md" (click)="selectedCategoryId = '5c915324e172e4e64590e346'" [ngClass]="{'selected': selectedCategoryId === '5c915324e172e4e64590e346'}">
+          <ion-card id="communityCard" class="category-card" mode="md" (click)="selectedCategoryId = '5c915324e172e4e64590e346'" [ngClass]="{'selected': selectedCategoryId === '5c915324e172e4e64590e346'}">
             <ion-card-header>
               <ion-card-title>Community</ion-card-title>
             </ion-card-header>
