Kevin tolentino protractor add remove friend (#161)
* added initial files for e2e test and added debug.log to git ignore due to vs code bug

* 1. put flag on e2e test to not update in package.json. 2. completed first two specs of logging in as Ted Ho

* added id to chat ion-item and completed spec to click chat button on menu sidebar

* added ids to create chat button and create chat header and completed spec to show the Create Chat Page

* incorporated chat page class

* added method on app object base to input text on chat searchbar with searchbar-input and selected id

* added class for Restvo selected app users and working on element text check method

* added id to selectAppUser tag to select user to chat with and finished selecct user spect

* removed findSubElement in app.po.ts. Added spec to enter input into ion-textarea using by.css method with angular name attribute with user name value.

* implemented method to click modal chat button, added id to chat send button, commented clickElement method on App class

* added expectation to send chat spec to expect chat p tags in ion-list to equal 2

* created spec to click the more elipses button on groupchat.html; added id to report button on the showreceiptinfo html page

* created spec to report, delete & unfriend selected user

* moved relevant methods to App class and added checkForChatListName method to check for chat list name for chat list spec

* removed console logs and completed log out spec by adding elementIsPresent() method to check for sign in button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
             <div tabindex="0"></div></ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerLink]="['/app/myconversations/chat']" mode="md">
+            <ion-item id="chat" [routerLink]="['/app/myconversations']" mode="md">
               <ion-icon slot="start" name="chatbox"></ion-icon>
               <ion-label>Chat</ion-label>
               <ion-badge *ngIf="chatService && chatService.connectTabBadge" slot="end" mode="md">{{chatService.connectTabBadge}}</ion-badge>
