--- a/src/app/pages/connect/createchat/createchat.page.html
+++ b/src/app/pages/connect/createchat/createchat.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header id="createChatHeader">
   <ion-toolbar>
     <ion-buttons slot="start">
     <ion-button (click)="backButton()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
@@ -8,9 +8,9 @@
   </ion-toolbar>
   <ion-toolbar>
     <div>
-      <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)"></ion-searchbar>
+      <ion-searchbar id="chatSearchBar" [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)"></ion-searchbar>
       <div class="selected-buttons">
-        <ion-button size="small" *ngFor="let person of selectedAppUsers" (click)="unselect(person)">{{person.name}}<ion-icon name="close-circle" style="margin-left: 5px;"></ion-icon></ion-button>
+        <ion-button class="selectedAppUsers" size="small" *ngFor="let person of selectedAppUsers" (click)="unselect(person)">{{person.name}}<ion-icon name="close-circle" style="margin-left: 5px;"></ion-icon></ion-button>
       </div>
       <form *ngIf="displayGroup" [formGroup]="chatForm">
         <ion-item>
@@ -45,7 +45,7 @@
       <div tabindex="0"></div></ion-item>
     </ion-list>
     <ion-list-header>{{userData.user.churches[userData.currentCommunityIndex].name}}</ion-list-header>
-    <ion-list>
+    <ion-list id="restvoGroup">
       <ion-item *ngFor="let person of listOfAppUsers; trackBy: customTrackBy" (click)="select(person)">
         <ion-avatar slot="start">
           <ion-img *ngIf="person.avatar" [src]="person.avatar"></ion-img>
@@ -64,7 +64,6 @@
 
 <ion-footer>
   <ion-toolbar>
-      <ion-button expand="full" shape="round" size="medium" (click)="selectAppUsers()" color="primary" [disabled]="totalSelected < 1 || (totalSelected > 1 && chatForm.hasError('required'))">Select {{totalSelected}}&nbsp;<span *ngIf="totalSelected <= 1">Person</span><span *ngIf="totalSelected > 1">People</span></ion-button>
+      <ion-button id="selectAppUsersButton" expand="full" shape="round" size="medium" (click)="selectAppUsers()" color="primary" [disabled]="totalSelected < 1 || (totalSelected > 1 && chatForm.hasError('required'))">Select {{totalSelected}}&nbsp;<span *ngIf="totalSelected <= 1">Person</span><span *ngIf="totalSelected > 1">People</span></ion-button>
   </ion-toolbar>
 </ion-footer>
-
